2008-11-15  Carsten Dominik  <dominik@science.uva.nl>

	* org-publish.el (org-publish-attachment): Allow copy-file to
	overwrite files.

2008-11-13  Glenn Morris  <rgm@gnu.org>

	* org-agenda.el (org-get-closed): Fix alias.

2008-11-12  Juanma Barranquero  <lekktu@gmail.com>

	* org.el (org-link-escape): Fix typo in docstring.

2008-11-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-yank): Make any prefix force normal yanking.
	Suppress folding if text would be swallowed into a folded
	subtree.
	(org-yank-folded-subtrees, org-yank): Docstring updates.

	* org-agenda.el (org-agenda-compare-effort): Treat no effort
	defined as 0.

	* org-exp.el (org-export-language-setup): Add Catalan and
	Esperanto language entries.

2008-11-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-refile): Allow refiling of entire regions.

	* org-clock.el (org-clock-time%): New function.

	* org.el (org-entry-get, org-entry-delete): Use safer regexps to
	retrieve property values.

2008-11-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-agenda.el (org-agenda-list): Handle the value `only' of
	org-agenda-show-log'.
	(org-agenda-log-mode): Interpret a double prefix arg.

2008-11-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-exp.el (org-export-html-footnotes-section): New variable.
	(org-export-as-html): Use `org-export-html-footnotes-section' to
	insert the footnotes.
	(org-export-language-setup): Add "Footnotes" to language words.

2008-11-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-yank): Fix bug when not inserting a subtree.

2008-11-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-vm.el (org-vm-follow-link): Call `vm-preview-current-message'
	instead of `vm-beginning-of-message'.

	* org.el (org-make-link-regexps): Make sure that links to gnus can
	contain brackets.

2008-11-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-attach.el (org-attach-dir): Remove duplicate ID creation
	code.
