@@ -1,3 +1,8 @@
+2008-11-17  Juanma Barranquero  <lekktu@gmail.com>
+
+	* org.el (org-time-string-to-absolute, org-small-year-to-year)
+	(org-tags-sparse-tree): Fix typos in docstrings.
+
 2008-11-15  Carsten Dominik  <dominik@science.uva.nl>
 
 	* org-publish.el (org-publish-attachment): Allow copy-file to
